# voice_guard_rail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  app_cloud.py  deploy.sh  pyproject.toml  start-local.sh  start.sh
.github/workflows/: deploy.yml
api/: __init__.py  main.py
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/cdk.out/: VoiceEmotionStack.assets.json  VoiceEmotionStack.template.json  manifest.json  tree.json
cdk/lib/: voice-emotion-stack.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/: __init__.py  audio_recorder.py  emotion_classifier.py  sensevoice_analyzer.py  speech_transcriber.py  translator.py
test_samples/: test_full_ravdess.py  test_ravdess.py
